@@ -128,6 +128,8 @@ Improvements
 * SOLR-16461: `/solr/coreName/replication?command=backup` now has a v2 equivalent, available at
   `/api/cores/coreName/replication/backups` (Sanjay Dutt, Jason Gerlowski, Alex Deparvu)
 
+* SOLR-16938: Auto configure tracer without a <tracerConfig> tag in solr.xml (Alex Deparvu)
+
 Optimizations
 ---------------------
 
